--- a/fullstack1.html
+++ b/fullstack1.html
@@ -18,7 +18,28 @@
           <li>remote repository</li>
         </ol>
         <p> cd file location to initiate<br>
-        
+            username for git hub is srejayalakshmmy<br>
+            password for git hub is dakshinamurthy@100<br>
+            mail for git hub is pogulasrilakshmi100@gmail.com<br>
         </p>
+        <p>
+            cd paste the file link kept in this pc<br>
+            mkdir filename<br>
+            cd filename<br>
+            git init<br>
+            git status<br>
+            git add filename in vs code<br>
+            git status<br>
+            git commit -m "message"<br>
+            git remote add origin gitlink<br>
+            git push origin master(you will get an error)<br>
+            git config --global user.name "srejayalakshmmy"<br>
+            git config --global user.email"pogulasrilakshmi100@gmail.com"<br>
+            git add fullstack1.html<br>
+            git commit -m "gururepo"<br>
+            git push origin master<br>
+
+        </p>
+        <p>iam a naughty girl</p>
     </body>
 </html>
